logs/Slang/chapter-6/6.9.2--vector_scalared.sv.log
name: vector_scalared
description: scalared vector tests
should_fail: 0
tags: 6.9.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.9.2--vector_scalared.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.9.2--vector_scalared.sv:8:7: error: expected declarator
	logic scalared [15:0] a = 0;
	     ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.9.2--vector_scalared.sv:8:8: error: expected member
	logic scalared [15:0] a = 0;
	      ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.9.2--vector_scalared.sv:10:2: error: expected member
	a[1] = 1;
	^
